@@ -1,11 +1,14 @@
-// File: src/test/java/com/CSSEProject/SmartWasteManagement/reporting/service/ReportingServiceTest.java
+// Testing ReportingService analytics and dashboard functionality with mocked repositories
 package com.CSSEProject.SmartWasteManagement.reporting.service;
 
-import com.CSSEProject.SmartWasteManagement.dto.CollectionEventDto;
 import com.CSSEProject.SmartWasteManagement.dto.DashboardStatsDto;
+import com.CSSEProject.SmartWasteManagement.reporting.service.ReportingService;
 import com.CSSEProject.SmartWasteManagement.user.entity.User;
+import com.CSSEProject.SmartWasteManagement.user.entity.UserRole;
 import com.CSSEProject.SmartWasteManagement.waste.entity.CollectionEvent;
 import com.CSSEProject.SmartWasteManagement.waste.entity.WasteBin;
+import com.CSSEProject.SmartWasteManagement.waste.entity.BinStatus;
+import com.CSSEProject.SmartWasteManagement.waste.entity.BinType;
 import com.CSSEProject.SmartWasteManagement.waste.repository.CollectionEventRepository;
 import com.CSSEProject.SmartWasteManagement.waste.repository.WasteBinRepository;
 import org.junit.jupiter.api.BeforeEach;
@@ -13,14 +16,22 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.MockitoAnnotations;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.when;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyLong;
+import static org.mockito.Mockito.*;
 
+/**
+ * Unit tests for ReportingService analytics and dashboard functionality.
+ * Tests dashboard statistics and collection event reporting with mocked repository dependencies.
+ */
 @ExtendWith(MockitoExtension.class)
 class ReportingServiceTest {
 
@@ -33,79 +44,119 @@ class ReportingServiceTest {
     @InjectMocks
     private ReportingService reportingService;
 
-    private User resident;
-    private User staff;
-    private WasteBin bin;
-    private CollectionEvent event1;
-    private CollectionEvent event2;
+    private User mockStaff;
+    private WasteBin mockBin;
+    private CollectionEvent mockCollection1;
+    private CollectionEvent mockCollection2;
 
     @BeforeEach
     void setUp() {
-        // Create mock data for our tests
-        resident = new User();
-        resident.setId(1L);
-        resident.setName("Test Resident");
+        MockitoAnnotations.openMocks(this);
+        
+        // Arrange - Setup test data
+        mockStaff = new User();
+        mockStaff.setId(1L);
+        mockStaff.setName("Staff Member");
+        mockStaff.setRole(UserRole.ROLE_STAFF);
 
-        staff = new User();
-        staff.setId(2L);
-        staff.setName("Test Staff");
+        mockBin = new WasteBin();
+        mockBin.setBinId("BIN-001");
+        mockBin.setLocation("123 Main St");
+        mockBin.setBinType(BinType.GENERAL_WASTE);
+        mockBin.setCapacity(120.0);
+        mockBin.setCurrentLevel(75.0);
+        mockBin.setStatus(BinStatus.ACTIVE);
 
-        bin = new WasteBin();
-        bin.setId(101L);
-        bin.setBinId("BIN-TEST-01");
-        bin.setResident(resident);
+        mockCollection1 = new CollectionEvent();
+        mockCollection1.setId(1L);
+        mockCollection1.setCollectionTime(LocalDateTime.now().minusHours(2));
+        mockCollection1.setWeight(15.5);
+        mockCollection1.setCalculatedCharge(25.0);
+        mockCollection1.setWasteBin(mockBin);
+        mockCollection1.setCollector(mockStaff);
 
-        event1 = new CollectionEvent();
-        event1.setId(1001L);
-        event1.setWasteBin(bin);
-        event1.setStaffMember(staff);
-        event1.setWeightInKg(10.5);
-        event1.setCollectionTime(LocalDateTime.now());
-
-        event2 = new CollectionEvent();
-        event2.setId(1002L);
-        event2.setWasteBin(bin);
-        event2.setStaffMember(staff);
-        event2.setWeightInKg(5.5);
-        event2.setCollectionTime(LocalDateTime.now().minusDays(1));
+        mockCollection2 = new CollectionEvent();
+        mockCollection2.setId(2L);
+        mockCollection2.setCollectionTime(LocalDateTime.now().minusHours(1));
+        mockCollection2.setWeight(22.3);
+        mockCollection2.setCalculatedCharge(35.0);
+        mockCollection2.setWasteBin(mockBin);
+        mockCollection2.setCollector(mockStaff);
     }
 
     @Test
-    void getDashboardStats_shouldReturnCorrectCalculations() {
-        // --- ARRANGE ---
-        // Tell our fake repositories what to return when called
-        when(collectionEventRepository.findAll()).thenReturn(List.of(event1, event2));
-        when(wasteBinRepository.count()).thenReturn(5L); // Let's pretend there are 5 bins
+    void getDashboardStats_ShouldReturnCorrectStats_WhenDataExists() {
+        // Arrange
+        List<CollectionEvent> collections = Arrays.asList(mockCollection1, mockCollection2);
+        when(collectionEventRepository.findAll()).thenReturn(collections);
+        when(wasteBinRepository.count()).thenReturn(5L);
+        when(wasteBinRepository.countByStatus(BinStatus.ACTIVE)).thenReturn(4L);
 
-        // --- ACT ---
-        DashboardStatsDto stats = reportingService.getDashboardStats(null, null);
+        // Act
+        DashboardStatsDto result = reportingService.getDashboardStats();
 
-        // --- ASSERT ---
-        // Check if the calculations are correct
-        assertNotNull(stats);
-        assertEquals(2, stats.getTotalCollections()); // event1 + event2 = 2 collections
-        assertEquals(16.0, stats.getTotalWeightKg()); // 10.5 + 5.5 = 16.0
-        assertEquals(5, stats.getTotalBins());
+        // Assert
+        assertNotNull(result);
+        assertEquals(2, result.getTotalCollections());
+        assertEquals(37.8, result.getTotalWasteCollected(), 0.001); // 15.5 + 22.3
+        assertEquals(60.0, result.getTotalRevenue(), 0.001); // 25.0 + 35.0
+        assertEquals(5, result.getTotalBins());
+        assertEquals(4, result.getActiveBins());
+        verify(collectionEventRepository).findAll();
+        verify(wasteBinRepository).count();
+        verify(wasteBinRepository).countByStatus(BinStatus.ACTIVE);
     }
 
     @Test
-    void getCollectionEvents_shouldReturnCorrectlyMappedDtos() {
-        // --- ARRANGE ---
-        when(collectionEventRepository.findAll()).thenReturn(List.of(event1, event2));
+    void getCollectionEvents_ShouldReturnEvents_WhenEventsExist() {
+        // Arrange
+        List<CollectionEvent> collections = Arrays.asList(mockCollection1, mockCollection2);
+        when(collectionEventRepository.findAll()).thenReturn(collections);
 
-        // --- ACT ---
-        List<CollectionEventDto> dtos = reportingService.getCollectionEvents(null, null);
+        // Act
+        List<CollectionEvent> result = reportingService.getCollectionEvents();
 
-        // --- ASSERT ---
-        assertNotNull(dtos);
-        assertEquals(2, dtos.size()); // We should get two DTOs back
+        // Assert
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals(1L, result.get(0).getId());
+        assertEquals(2L, result.get(1).getId());
+        assertEquals(15.5, result.get(0).getWeight(), 0.001);
+        assertEquals(22.3, result.get(1).getWeight(), 0.001);
+        verify(collectionEventRepository).findAll();
+    }
 
-        // Check if the data was mapped correctly for the first event
-        CollectionEventDto firstDto = dtos.get(0);
-        assertEquals(event1.getId(), firstDto.getId());
-        assertEquals("BIN-TEST-01", firstDto.getBinId());
-        assertEquals("Test Resident", firstDto.getResidentName());
-        assertEquals("Test Staff", firstDto.getStaffName());
-        assertEquals(10.5, firstDto.getWeightInKg());
+    @Test
+    void getCollectionEventsByCollector_ShouldReturnFilteredEvents_WhenCollectorHasEvents() {
+        // Arrange
+        List<CollectionEvent> collections = Arrays.asList(mockCollection1, mockCollection2);
+        when(collectionEventRepository.findByCollectorId(1L)).thenReturn(collections);
+
+        // Act
+        List<CollectionEvent> result = reportingService.getCollectionEventsByCollector(1L);
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals(1L, result.get(0).getId());
+        assertEquals(2L, result.get(1).getId());
+        verify(collectionEventRepository).findByCollectorId(1L);
+    }
+
+    @Test
+    void getCollectionEventsByBin_ShouldReturnFilteredEvents_WhenBinHasEvents() {
+        // Arrange
+        List<CollectionEvent> collections = Arrays.asList(mockCollection1, mockCollection2);
+        when(collectionEventRepository.findByWasteBinBinId("BIN-001")).thenReturn(collections);
+
+        // Act
+        List<CollectionEvent> result = reportingService.getCollectionEventsByBin("BIN-001");
+
+        // Assert
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertEquals("BIN-001", result.get(0).getWasteBin().getBinId());
+        assertEquals("BIN-001", result.get(1).getWasteBin().getBinId());
+        verify(collectionEventRepository).findByWasteBinBinId("BIN-001");
     }
 }
